[tool.poetry]
name = "notify-admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
notifications-utils = {path = "../utils"}
ago = "^0.0.93"
blinker = "^1.4"
eventlet = "^0.25.2"
Flask-Wtf = "^0.14.3"
Flask-Login = "^0.5.0"
gunicorn = "^20.0.4"
pyexcel = "^0.6.0"
pyexcel-io = "^0.5.20"
pyexcel-ods3 = "^0.5.3"
pyexcel-xls = "^0.5.8"
pyexcel-xlsx = "^0.5.8"
whitenoise = "^5.0.1"
notify-client-python = {git = "https://github.com/govau/notify-client-python", rev = "v5.3.0"}
sentry-sdk = {extras = ["flask"], version = "^0.14.3"}
Flask = "^1.1.2"
email-validator = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
