[tool.poetry]
name = "notifications-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-mock = "^3.1"
pytest-cov = "^2.8"
requests-mock = "^1.7"
freezegun = "^0.3.15"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
