[tool.poetry]
name = "notifications-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bleach = "^3.1"
boto3 = "^1.13"
botocore = "^1.16"
certifi = "^2020.4"
chardet = "^3.0"
click = "^7.1"
flask = "^1.1"
flask-redis = "^0.4.0"
idna = "^2.9"
itsdangerous = "^1.1"
jinja2 = "^2.11"
jmespath = "^0.9.5"
markupsafe = "^1.1"
mistune = "^0.8.4"
monotonic = "^1.5"
orderedset = "^2.0"
phonenumbers = "^8.12"
pypdf2 = "^1.26"
python-dateutil = "^2.8"
python-json-logger = "^0.1.11"
pytz = "^2020.1"
pyyaml = "^5.3"
redis = "^3.5"
requests = "^2.23"
s3transfer = "^0.3.3"
six = "^1.14"
smartypants = "^2.0"
statsd = "^3.3"
urllib3 = "^1.25"
webencodings = "^0.5.1"
werkzeug = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-mock = "^3.1"
pytest-cov = "^2.8"
requests-mock = "^1.7"
freezegun = "^0.3.15"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
